--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Currently there is some support for the following mechanisms:
 
   - CRAM-MD5 (RFC 2195, requires libgcrypt)
   - EXTERNAL (RFC 2222)
-  - GSSAPI (RFC 2222, client only, requires MIT Kerberos 5 GSSAPI library)
+  - GSSAPI (RFC 2222, requires MIT Kerberos 5 GSSAPI library)
   - ANONYMOUS (RFC 2245)
   - PLAIN (RFC 2595)
   - SECURID (RFC 2808)
