--- a/README
+++ b/README
@@ -22,7 +22,7 @@ following systems, but no guarantees.
   - alphaev67-dec-osf5.0 (Compaq Tru64 UNIX C and Tru64 Make)
   - i686-pc-linux-gnu (Debian unstable)
   - i686-pc-linux-gnu (RedHat 7.2)
-  - mips-sgi-irix6.5 (MIPS C compiler and IRIX make)
+  - mips-sgi-irix6.5 (MIPS C compiler in 64 bit mode and IRIX make)
   - rs6000-ibm-aix4.3.2.0 (GCC 2.9-aix43-000718, GNU make)
   - rs6000-ibm-aix4.3.2.0 (IBM C for AIX compiler and AIX Make)
   - sparc-sun-solaris2.6 (Sun WorkShop Compiler C 5.0 and Sun make)
