--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,23 @@
 Libgsasl NEWS -- history of user-visible changes.
 
-* Changes in 0.0.2 (released 2002-10-17)
+* Changes in 0.0.2 (released 2002-11-07)
 
-** Uses pkg-config instead of libgsasl.m4 + libgsasl-config.in.
+** Includes a copy of libstringprep 0.0.1 for Unicode NFKC
+   normalization and locale charset to UTF-8 string conversion, and
+   preparation for the future if a SASL Stringprep profile is created.
+   If libstringprep is already installed, it is used by default.  You
+   can force the use of the internal version with
+   --without-system-libstringprep.
 
-** Uses pkg-config to find libntlm.
+** Uses pkg-config instead of libgsasl.m4 + libgsasl-config.in, and
+   for finding libntlm (requires libntlm 0.3.1 or later).
+
+** Self tests for several mechanisms.
+
+** The API now allows mechanisms to return data even when returning
+   GSASL_OK (earlier only on GSASL_NEEDS_MORE).
+
+** Bug fixes.
 
 * Changes in 0.0.1 (released 2002-10-12)
 
