--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -288,42 +288,41 @@ directory in which the header file is located to the compilers include
 file search path (via the @option{-I} option).
 
 However, the path to the include file is determined at the time the
-source is configured.  To solve this problem, `Libgsasl' ships with a small
-helper program @command{libgsasl-config} that knows the path to the
+source is configured.  To solve this problem, `Libgsasl' uses the
+external package @command{pkg-config} that knows the path to the
 include file and other configuration options.  The options that need
 to be added to the compiler invocation at compile time are output by
-the @option{--cflags} option to @command{libgsasl-config}.  The following
-example shows how it can be used at the command line:
+the @option{--cflags} option to @command{pkg-config libgsasl}.  The
+following example shows how it can be used at the command line:
 
 @example
-gcc -c foo.c `libgsasl-config --cflags`
+gcc -c foo.c `pkg-config libgsasl --cflags`
 @end example
 
-Adding the output of @samp{libgsasl-config --cflags} to the compilers
-command line will ensure that the compiler can find the `Libgsasl' header
-file.
+Adding the output of @samp{pkg-config libgsasl --cflags} to the
+compilers command line will ensure that the compiler can find the
+`Liblibgsasl' header file.
 
 A similar problem occurs when linking the program with the library.
 Again, the compiler has to find the library files.  For this to work,
 the path to the library files has to be added to the library search path
 (via the @option{-L} option).  For this, the option @option{--libs} to
-@command{libgsasl-config} can be used.  For convenience, this option
+@command{pkg-config libgsasl} can be used.  For convenience, this option
 also outputs all other options that are required to link the program
-with the `Libgsasl' libararies (in particular, the @samp{-lgsasl}
-option).  The example shows how to link @file{foo.o} with the `Libgsasl'
+with the `Liblibgsasl' libararies (in particular, the @samp{-llibgsasl}
+option).  The example shows how to link @file{foo.o} with the `Liblibgsasl'
 library to a program @command{foo}.
 
 @example
-gcc -o foo foo.o `libgsasl-config --libs`
+gcc -o foo foo.o `pkg-config libgsasl --libs`
 @end example
 
 Of course you can also combine both examples to a single command by
-specifying both options to @command{libgsasl-config}:
+specifying both options to @command{pkg-config}:
 
 @example
-gcc -o foo foo.c `libgsasl-config --cflags --libs`
+gcc -o foo foo.c `pkg-config libgsasl --cflags --libs`
 @end example
-
 
 @c **********************************************************
 @c *****************  Using the Library  ********************
