--- a/README
+++ b/README
@@ -33,6 +33,8 @@ please let me know so work duplication can be avoided.
   + More SASL mechanisms
   + Security layer improvements, including support for privacy
     separation (authenticate in one process, pass state to another).
+  + Securid server fails self tests on alpha-unknown-openbsd3.1,
+    I don't understand why.  Memory corruption?
   - Improve documentation
   - Port to Cyclone?
 
