Update name to "GNU SASL".

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Libgsasl AUTHORS -- information about the authors
+GNU SASL AUTHORS -- information about the authors
 See the end for copying conditions.
 
 Simon Josefsson <simon@josefsson.org>
@@ -40,16 +40,8 @@ HGlBrIkG2vSgie4=
 -----END PGP PUBLIC KEY BLOCK-----
 
 ----------------------------------------------------------------------
-Copyright information:
-
 Copyright (C) 2002 Simon Josefsson
 
-   Permission is granted to anyone to make or distribute verbatim copies
-   of this document as received, in any medium, provided that the
-   copyright notice and this permission notice are preserved,
-   thus giving the recipient permission to redistribute in turn.
-
-   Permission is granted to distribute modified versions
-   of this document, or of portions of it,
-   under the above conditions, provided also that they
-   carry prominent notices stating who last changed them.
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
