--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Libgsasl NEWS -- history of user-visible changes.               -*- outline -*-
+GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 See the end for copying conditions.
 
 Please send libgsasl bug reports to bug-libgsasl@josefsson.org.
@@ -42,16 +42,8 @@ payload data.
 ** Initial release.
 
 ----------------------------------------------------------------------
-Copyright information:
-
 Copyright (C) 2002 Simon Josefsson
 
-   Permission is granted to anyone to make or distribute verbatim copies
-   of this document as received, in any medium, provided that the
-   copyright notice and this permission notice are preserved,
-   thus giving the recipient permission to redistribute in turn.
-
-   Permission is granted to distribute modified versions
-   of this document, or of portions of it,
-   under the above conditions, provided also that they
-   carry prominent notices stating who last changed them.
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
