--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -1,7 +1,7 @@
 \input texinfo                  @c -*- Texinfo -*-
 @c Copyright (C) 2002 Simon Josefsson
 @c
-@c This file is part of the libgsasl
+@c This file is part of the GNU SASL
 @c Permission is granted to copy, distribute and/or modify this document
 @c under the terms of the GNU Free Documentation License, Version 1.1
 @c or any later version published by the Free Software Foundation;
