--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -98,11 +98,11 @@ used by network servers (e.g., IMAP, SMTP) to request authentication
 from clients, and in clients to authenticate against servers.
 
 GNU SASL contains of a library (`libgsasl'), a command line utility
-(`gsasl') to access the library from shells and a manual.  The library
-includes support for the framework (with authentication functions and
-application data privacy and integrity functions) and at least partial
-support for the CRAM-MD5, EXTERNAL, GSSAPI, ANONYMOUS, PLAIN, SECURID,
-DIGEST-MD5, LOGIN, NTLM mechanisms.
+(`gsasl') to access the library from the shell, and a manual.  The
+library includes support for the framework (with authentication
+functions and application data privacy and integrity functions) and at
+least partial support for the CRAM-MD5, EXTERNAL, GSSAPI, ANONYMOUS,
+PLAIN, SECURID, DIGEST-MD5, LOGIN, NTLM mechanisms.
 
 The library is easily ported because it does not do network
 communication by itself, but rather leaves it up to the calling
