--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 GNU SASL README -- important introductory notes
 See the end for copying conditions.
 
-This directory holds GNU SASL which is an implemention of the Simple
+This directory holds GNU SASL which is an implementation of the Simple
 Authentication and Security Layer (SASL).  It contains a runtime
 library `libgsasl' and an application `gsasl' for interfacing with the
 library from the command line.
@@ -34,16 +34,12 @@ please let me know so work duplication can be avoided.
   - Improve documentation
   - Port to Cyclone?
 
-The library (lib/) is licensed under the GNU Lesser Public License
-license (see COPYING.LIB), and the documentation (doc/) is licensed
-under the GNU Free Documentation License (see COPYING.DOC).
-
-The reason the LGPL is used for this library is that other
-implementations of SASL exists, Cyrus SASL, but parts of it relies on
-software that is incompatible with the GPL.  Do not get the impression
-that the LGPL was chosen just because libgsasl is a library.  Because
-the LGPL does less to protect the user's freedom, if you are able to
-use this library under the GPL license, you are encouraged to do so.
+The GNU SASL library and application (lib/, src/, and tests/) is
+licensed under the GNU Public License license (see COPYING), and the
+documentation (doc/) is licensed under the GNU Free Documentation
+License (see COPYING.DOC).  The other sub-directories (argp/, and
+libstringprep/) are distributed here for convenience and have their
+own respective licenses.
 
 For updates to the project, see <URL:http://josefsson.org/libgsasl/>.
 
