--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@ Please send libgsasl bug reports to bug-libgsasl@josefsson.org.
 
 ** License changed to GPL.
 
-** Libgsasl is an official GNU project.
+** Official GNU project.
 
 * Changes in 0.0.3 (released 2002-12-05)
 
