--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -234,23 +234,37 @@ that was defined or negotiated by the other side.
 Libgsasl has at some point in time been tested on the following
 platforms.
 
-@enumerate
+@item Debian GNU/Linux 3.0r0 (Woody)
+@cindex Debian
+
+GCC 2.95.4 and GNU Make. This is the main development
+platform. alphaev67-unknown-linux-gnu, alphaev6-unknown-linux-gnu,
+hppa64-unknown-linux-gnu, i686-pc-linux-gnu, ia64-unknown-linux-gnu.
 
 @item Tru64 UNIX
 @cindex Tru64
 
-alphaev68-dec-osf5.1, Tru64 UNIX C compiler, Tru64 Make.
+Tru64 UNIX C compiler and Tru64 Make. alphaev68-dec-osf5.1.
 
-@item Debian 3.0r0 (Woody)
-@cindex Debian
+@item SuSE Linux 7.1
+@cindex SuSE
 
-i686-pc-linux-gnu, GCC 2.95.4, GNU Make. This is the main development
-host.
+GCC 2.96 and GNU Make. alphaev67-unknown-linux-gnu.
 
-@item RedHat 8.0
+@item SuSE Linux 7.2a
+@cindex SuSE Linux
+
+GCC 3.0 and GNU Make. ia64-unknown-linux-gnu.
+
+@item RedHat Linux 7.2
 @cindex RedHat
 
-i686-pc-linux-gnu, GCC 3.2, GNU Make.
+GCC 2.96 and GNU Make. i686-pc-linux-gnu.
+
+@item RedHat Linux 8.0
+@cindex RedHat
+
+GCC 3.2 and GNU Make. i686-pc-linux-gnu.
 
 @item IRIX 6.5
 @cindex IRIX
@@ -262,27 +276,44 @@ mips-sgi-irix6.5, MIPS C compiler, IRIX Make.
 
 rs6000-ibm-aix4.3.2.0, IBM C for AIX compiler, AIX Make.
 
+@item Microsoft Windows 2000 (Cygwin)
+@cindex Windows
+
+GCC 3.2, GNU make. i686-pc-cygwin
+
 @item HP-UX 11.11
 @cindex HP-UX
 
-hppa2.0w-hp-hpux11.11, HP-UX C compiler, HP Make.
+HP-UX C compiler and HP Make. hppa2.0w-hp-hpux11.11.
 
-@item Solaris 2.8
+@item SUN Solaris 2.8
 @cindex Solaris
 
-sparc-sun-solaris2.8, Sun WorkShop Compiler C 6.0, SUN Make.
+Sun WorkShop Compiler C 6.0 and SUN Make. sparc-sun-solaris2.8.
 
 @item NetBSD 1.6
 @cindex NetBSD
 
-alpha-unknown-netbsd1.6, GCC 2.95.3, GNU Make.
+GCC 2.95.3 and GNU Make. alpha-unknown-netbsd1.6,
+i386-unknown-netbsdelf1.6.
+
+@item OpenBSD 3.1
+@cindex OpenBSD
+
+GCC 2.95.3 and GNU Make.
+@c alpha-unknown-openbsd3.1,
+i386-unknown-openbsd3.1.
+
+@item FreeBSD 4.7
+@cindex FreeBSD
+
+GCC 2.95.4 and GNU Make. alpha-unknown-freebsd4.7,
+i386-unknown-freebsd4.7.
 
 @end enumerate
 
 If you use Libgsasl on, or port Libgsasl to, a new platform please
-report it to the author.  In particular, if someone has access to a
-machine running Microsoft Windows, a port to it and/or a Libgsasl
-maintainer for the platform would be gratefully accepted.
+report it to the author.
 
 @node Bug Reports
 @section Bug Reports
