--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -234,6 +234,8 @@ that was defined or negotiated by the other side.
 Libgsasl has at some point in time been tested on the following
 platforms.
 
+@enumerate
+
 @item Debian GNU/Linux 3.0r0 (Woody)
 @cindex Debian
 
