--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ See the end for copying conditions.
 
 Please send libgsasl bug reports to bug-libgsasl@josefsson.org.
 
-* Changes in 0.0.4
+* Changes in 0.0.4 (released 2002-12-13)
 
 ** License changed to GPL.
 
