--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,7 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented Libgsasl.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Comment: This key is used to sign Libgsasl releases.
+Comment: This key is used to sign GNU SASL releases.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
 T5rhTFDfDcT9SO0eIlfKOraSRnVEHyDDH2PAgJFxyneFELcmLUQ66D+m8z+ziGro
